--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <title>Frontend Mentor | QR code component</title>
 
+    <link rel="stylesheet" href="/dist/style.css" />
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
@@ -22,6 +23,7 @@
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
+        text-decoration: none;
       }
     </style>
   </head>
@@ -33,7 +35,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">zharvis</a>.
     </div>
   </body>
 </html>
