--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       href="./images/favicon-32x32.png"
     />
 
+    <!-- link Font from Google-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | QR code component</title>
 
     <link rel="stylesheet" href="/dist/style.css" />
@@ -28,8 +36,24 @@
     </style>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <main>
+      <div class="container">
+        <article class="card">
+          <div class="card__qrcode">
+            <img src="/images/image-qr-code.png" alt="QR-Code" />
+          </div>
+          <div class="card__title">
+            <h2>Improve your front-end skills by building projects</h2>
+          </div>
+          <div class="card__description">
+            <p>
+              Scan the QR code to visit Frontend Mentor and take your coding
+              skills to the next level
+            </p>
+          </div>
+        </article>
+      </div>
+    </main>
 
     <div class="attribution">
       Challenge by
