--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <title>Frontend Mentor | QR code component</title>
 
-    <link rel="stylesheet" href="dist/style.css" />
+    <link rel="stylesheet" href="./dist/style.css" />
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
@@ -40,7 +40,7 @@
       <div class="container">
         <article class="card">
           <div class="card__qrcode">
-            <img src="/images/image-qr-code.png" alt="QR-Code" />
+            <img src="./images/image-qr-code.png" alt="QR-Code" />
           </div>
           <div class="card__title">
             <h2>Improve your front-end skills by building projects</h2>
